Added price calculation and centered pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="preload" as="image" href="/src/assets/images/insert-coin.png">
+    <link rel="preload" as="image" href="/src/assets/images/insert-bill.png">
+
   </head>
 
   <body>
