--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="http://localhost:8098"></script>
     <meta charset="utf-8" />
     <title>Ionic App</title>
 
@@ -20,8 +21,6 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="preload" as="image" href="/src/assets/images/insert-coin.png">
-    <link rel="preload" as="image" href="/src/assets/images/insert-bill.png">
 
   </head>
 
